--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /220
-title: "This Week In React #220: Next.js, Astro, Nuqs, React Scan, Fumadocs, Fusion, Radix, Inertia | Sortables, Contributors Summit, Windows, Deep linking, Oklab, Audio, BottomTabs, Metro, OTA | TypeScript, Angular, Node.js, Vite"
+title: "This Week In React #220: Next.js, Astro, Nuqs, CRA, React Scan, Fumadocs, Fusion, Radix, Inertia | Sortables, Contributors Summit, Windows, Deep linking, Oklab, Audio, BottomTabs, Metro, OTA | TypeScript, Angular, Node.js, Vite"
 authors: [slorber]
 date: 02-05-2025
 ---
@@ -9,7 +9,7 @@ Hi everyone!
 
 This week we have a good variety of React articles and Next.js is finally adding support for Node.js runtime middleware!
 
-Mobile developers will also discover future plans for React Native, including for desktop support from Microsoft. A new sortables drag & drop library should unlock new interactions in your app, considering it's quite hard to build all this yourself.
+Mobile developers will also discover future plans for React Native, including desktop support from Microsoft. A new sortables drag & drop library should unlock new interactions in your app, considering it's quite hard to build all this yourself.
 
 TypeScript continues to progress with a new beta including a flag to support the newly added native Node.js support, and the upcoming browser support. A polyfill for native browser support is already available!
 
@@ -138,7 +138,7 @@ A new powerful React Native library for re-ordering items with drag & drop gestu
 - 📜 [You should not use URLPattern to route HTTP requests on the server](https://adventures.nodeland.dev/archive/you-should-not-use-urlpattern-to-route-http/): The upcoming Node.js 23 URLPattern feature, based on regexp, is not scalable enough.
 - 📜 [From Rust to TypeScript: A New Chapter for Prisma ORM](https://www.prisma.io/blog/from-rust-to-typescript-a-new-chapter-for-prisma-orm)
 - 📦 [TypeScript 5.8 beta \- `erasableSyntaxOnly`, require(esm), dependent return type narrowing](https://devblogs.microsoft.com/typescript/announcing-typescript-5-8-beta/)
-- 📦 [ES Module Shims 2.0 \- Polyfill for native ES module features](https://guybedford.com/es-module-shims-2.0): Already supports TC39 Type Annotations stripping, letting you run TypeScript code with `erasableSyntaxOnly` natively in the browser today, similarly to Node.js\!
+- 📦 [ES Module Shims 2.0 \- Polyfill for native ES module features](https://guybedford.com/es-module-shims-2.0): Already supports TC39 Type Annotations stripping, letting you run TypeScript code with `erasableSyntaxOnly` natively in the browser today, similar to Node.js\!
 - 📦 [Vite 6.1](https://github.com/vitejs/vite/blob/main/packages/vite/CHANGELOG.md#610-2025-02-05)
 - 📦 [Mentoss \- fetch() mocker for server/browser runtimes](https://humanwhocodes.com/blog/2025/01/introducing-mentoss-fetch-mocker/)
 - 🎥 [Angular: The Documentary](https://www.youtube.com/watch?v=cRC9DlH45lA)
