--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /221
-title: "This Week In React #221: State of React, React Router, rsbuild, React Admin, ProseMirror, Redux, Vercel, React Hook Form, Base UI, RSC | AI & React Native, React Strict DOM, Polygen, Ignite, New architecture, Radon, Gesture Handler | TypeScript, Prettier, esbuild..."
+title: "This Week In React #221: State of React, React Router, Rsbuild, ProseMirror, Redux, React Hook Form, Base UI, RSC, React Admin | AI & React Native, React Strict DOM, Polygen, Ignite, New Arch, Radon, Gesture Handler | TypeScript, Prettier, esbuild..."
 authors: [cyrilbo, matthieugicquel]
 date: 02-12-2025
 unlisted: true
@@ -10,9 +10,9 @@ Hi everyone!
 
 Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from React and React Native!
 
-This week we’ve been carefully reading the State of React results, and also found quite a few interesting articles. Things have been quieter when it comes to new releases.
+This week we’ve been carefully reading the [State of React 2024](https://2024.stateofreact.com) survey results, and also found quite a few interesting articles. Things have been quieter when it comes to new releases.
 
-Check our partner conf [App.js](https://appjs.co?utm_source=thisweekinreact)- 28th-30th May in 🇵🇱 Kraków - The biggest React Native and Expo-focused conference gives us a 15% discount with code "TWIR". Want to [submit a talk](https://forms.gle/KQQyUyT9YNz8KRuA6)? The CFP is closing soon.
+Check our partner conf [App.js](https://appjs.co?utm_source=thisweekinreact) - 28th-30th May in 🇵🇱 Kraków - The biggest React Native and Expo-focused conference gives us a 15% discount with code "TWIR". Want to [submit a talk](https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKSqxwrTdJJavOFgK-UA25K-hJPmZ5wnZDY7UUo9ULDuckkA/viewform?usp=send_form)? The CFP is closing soon.
 
 <!-- truncate -->
 
@@ -118,8 +118,8 @@ Some competitors also had things to announce:
 - 📜 [Style-observer: JS to observe CSS property changes, for reals](https://lea.verou.me/blog/2025/style-observer/)
 - 📜 [Optimizing Images for Web Performance](https://frontendmasters.com/blog/optimizing-images-for-web-performance/)
 - 📜 [CSS Custom Functions experiments in Chrome Canary](https://www.bram.us/2025/02/09/css-custom-functions-teaser/)
-- 📦 [Prettier v3.5](https://prettier.io/blog/2025/02/09/3.5.0): New objectWrap option, experimentalOperatorPosition option and TS config file support
-- 📦 [ESBuild v0.25](https://github.com/evanw/esbuild/releases/tag/v0.25.0): introduces backwards-incompatible changes
+- 📦 [Prettier 3.5](https://prettier.io/blog/2025/02/09/3.5.0): New objectWrap option, experimentalOperatorPosition option and TS config file support
+- 📦 [esbuild 0.25](https://github.com/evanw/esbuild/releases/tag/v0.25.0): introduces backwards-incompatible changes
 
 ---
 
