--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -118,8 +118,8 @@ Some competitors also had things to announce:
 - 📜 [Style-observer: JS to observe CSS property changes, for reals](https://lea.verou.me/blog/2025/style-observer/)
 - 📜 [Optimizing Images for Web Performance](https://frontendmasters.com/blog/optimizing-images-for-web-performance/)
 - 📜 [CSS Custom Functions experiments in Chrome Canary](https://www.bram.us/2025/02/09/css-custom-functions-teaser/)
-- 📦 [Prettier 3.5](https://prettier.io/blog/2025/02/09/3.5.0): New objectWrap option, experimentalOperatorPosition option and TS config file support
-- 📦 [esbuild 0.25](https://github.com/evanw/esbuild/releases/tag/v0.25.0): introduces backwards-incompatible changes
+- 📦 [Prettier 3.5 - TS config file, `objectWrap` option, `experimentalOperatorPosition` option](https://prettier.io/blog/2025/02/09/3.5.0)
+- 📦 [esbuild 0.25 - Various fixes and some backwards-incompatible changes](https://github.com/evanw/esbuild/releases/tag/v0.25.0)
 
 ---
 
