--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -81,9 +81,15 @@ Seb wrote the conclusion of the survey, make sure to check it out 🙂.
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![Optimizing Vercel Costs: Real-World Strategies](/emails/issues/221/pagepro.jpg)](https://pagepro.co/nextjs-hosting-cost-optimization?utm_source=newsletter&utm_medium=email&utm_campaign=this-week-in-react-expert-session&utm_id=this-week-in-react)
 
----
+**[Optimizing Vercel Costs: Real-World Strategies](https://pagepro.co/nextjs-hosting-cost-optimization?utm_source=newsletter&utm_medium=email&utm_campaign=this-week-in-react-expert-session&utm_id=this-week-in-react)**
+
+Deploying Next.js apps on Vercel is easy, but optimizing hosting costs? That’s a different story.
+
+Join Chris Lojniewski and Jakub Dakowicz of Pagepro on **February 20th, 11 AM EST** for a deep analysis of Vercel cost optimization strategies. Learn how to identify what drives your costs and reduce them with **code-level optimizations** like adjusting prefetching to avoid excessive function calls, choosing proper rendering methods, and trimming unnecessary data transfers.
+
+They’ll also show you how to **minimize reliance on Vercel’s premium features** with feature externalization - offloading analytics, image optimization, and password protection. Plus, they’ll break down when enterprise pricing is worth considering and when you’re better off with alternatives. **Stop overpaying, and [register today](https://pagepro.co/nextjs-hosting-cost-optimization?utm_source=newsletter&utm_medium=email&utm_campaign=this-week-in-react-expert-session&utm_id=this-week-in-react)**.
 
 ## 📱 React-Native {#react-native}
 
