--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -44,18 +44,19 @@ With EAS Workflows you can **automate and sequence** all your builds/updates/sub
 
 ## ⚛️ React {#react}
 
-[![State of React 2024](/emails/issues/221/state-of-react.png)](https://2024.stateofreact.com)
+[![State of React 2024 - Survey Results](/emails/issues/221/state-of-react.png)](https://2024.stateofreact.com)
 
-**[State of React 2024](https://2024.stateofreact.com)**
+**[State of React 2024 - Survey Results](https://2024.stateofreact.com)**
 
 The results of State of React 2024 are out. It is a gold mine of information and we can’t possibly talk about everything here but here are a few highlights:
 
-- Of the “new” React features, Server components are the most popular with 40% of the ~7000 respondents having “used it”, probably thanks to Next.js…
+- Of the “new” React features, Server Components are the most popular with 40% of the ~7000 respondents having “used it”, probably thanks to Next.js…
+- `forwardRef` is the most disliked React API, and is going away!
 - Have you heard about React’s Taint API? It looks like 80% of React devs have not, which is understandable since it’s experimental.
 - There’s not that much movement in the \#1 spot: Next.js, TanStack Query, Axios, Jest, and Zod are still the most frequently used.
 - A few rising stars: Zustand and Vitest got more users, TanStack Start is \#1 in interest even though almost no one has used it yet.
 
-Seb wrote the conclusion of the survey, make sure to check it out 🙂.
+Seb wrote the [survey conclusion](https://2024.stateofreact.com/en-US/conclusion/) — be sure to check it out! 🙂
 
 ---
 
