--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -61,18 +61,18 @@ Seb wrote the [survey conclusion](https://2024.stateofreact.com/en-US/conclusion
 ---
 
 - 💸 [Meet Harmony - An open source library for composing consistent and highly performant platforms from independent business features](https://bit.dev/blog/meet-harmony-a-practical-solution-for-composability?utm_source=This-Week-In-React&utm_id=7&utm_medium=newsletter)
-- 👀 [@rsbuild/plugin-react-router](https://github.com/rspack-contrib/rsbuild-plugin-react-router): This is not yet on npm, but may soon be a faster alternative to Vite for bundling React Router apps in framework mode.
+- 👀 [@rsbuild/plugin-react-router](https://github.com/rspack-contrib/rsbuild-plugin-react-router): Not yet on npm, but may soon be a faster alternative to Vite for bundling React Router apps in framework mode.
 - 📜 [How React Router works under the hood](https://tigerabrodi.blog/how-react-router-works-under-the-hood): From initial request to hydration, client-side navigation and actions.
-- 📜 [Handling Relationships in React Admin](https://marmelab.com/blog/2025/02/06/handling-relationships-in-react-admin.html): The included components (`<ReferenceField>` and its friends) usually do what you need, but this also explains how to build custom ones.
 - 📜 [Why I rebuilt ProseMirror’s renderer in React](https://smoores.dev/post/why_i_rebuilt_prosemirror_view/): Prosemirror (a text editor) manages its own state and virtual DOM, and it did not play well with React. This is a deep dive on the issues it caused, and the solution: using React directly instead of trying to “bridge the gap”.
 - 📜 [Promises across the void: Streaming data with RSC](https://edspencer.net/2024/7/12/promises-across-the-void-react-server-components): React can send not-yet resolved promises from the server and finish awaiting them on the client. This article from a few months ago explains how this works.
 - 📜 [What Do We Do with You, Old React?](https://www.manuelsanchezdev.com/blog/what-to-do-with-old-react-upgrading-to-modern-react): Tips on upgrading codebases that still use class components and “old” Redux.
 - 📜 [We Replaced Our React Frontend with Go and WebAssembly](https://dagger.io/blog/replaced-react-with-go): They explain why this was the right choice for them, but probably don’t do this at home.
 - 📜 [The Future of Ionic’s Commercial Products](https://ionic.io/blog/important-announcement-the-future-of-ionics-commercial-products): Ionic is discontinuing sales and support for its commercial products, including Appflow and enterprise offerings.
+- 📜 [Handling Relationships in React Admin](https://marmelab.com/blog/2025/02/06/handling-relationships-in-react-admin.html): The included components (`<ReferenceField>` and its friends) usually do what you need, but this also explains how to build custom ones.
 - 📜 [Redux Saga Is Hard Until You Look Under The Hood](https://www.reactsquad.io/blog/redux-saga-is-hard-until-you-look-under-the-hood)
 - 📜 [Master Redux Action Best Practices & Make Debugging Easy](https://janhesters.com/blog/master-redux-action-best-practices-and-make-debugging-easy)
-- 📦 [React Hook Form resolvers 4.0](https://github.com/react-hook-form/resolvers/releases/tag/v4.0.0): it adds a [standard-schema](https://github.com/standard-schema/standard-schema) resolver so you can switch easily between validation libraries that conform to the standard-schema specification.
-- 📦 [Base UI v1.0.0 alpha 6](https://github.com/mui/base-ui/releases/tag/v1.0.0-alpha.6): According to State of React, MUI is a very popular component library. Base UI, a collection of unstyled components by the same people, is making its way through the alpha phase.
+- 📦 [React Hook Form resolvers 4.0](https://github.com/react-hook-form/resolvers/releases/tag/v4.0.0): Adds a [standard-schema](https://github.com/standard-schema/standard-schema) resolver, so you can switch easily between validation libraries that conform to the standard-schema specification.
+- 📦 [Base UI v1.0.0 alpha 6](https://github.com/mui/base-ui/releases/tag/v1.0.0-alpha.6): This new collection of unstyled components is backed by a rockstar team of MUI/Radix contributors. It's making its way through the alpha phase with a significant release.
 - 🎥 [Jack Herrington \- Proof That React With RSCs is 2X Faster\!](https://www.youtube.com/watch?v=AJvbnNFHx0A)
 - 🎙️ [Rocket Ship 60 \- Module Federation, RSCs & Universal Apps with Jack Herrington](https://share.transistor.fm/s/144c4947)
 
