--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -67,12 +67,10 @@ Seb wrote the [survey conclusion](https://2024.stateofreact.com/en-US/conclusion
 - 📜 [Promises across the void: Streaming data with RSC](https://edspencer.net/2024/7/12/promises-across-the-void-react-server-components): React can send not-yet resolved promises from the server and finish awaiting them on the client. This article from a few months ago explains how this works.
 - 📜 [What Do We Do with You, Old React?](https://www.manuelsanchezdev.com/blog/what-to-do-with-old-react-upgrading-to-modern-react): Tips on upgrading codebases that still use class components and “old” Redux.
 - 📜 [We Replaced Our React Frontend with Go and WebAssembly](https://dagger.io/blog/replaced-react-with-go): They explain why this was the right choice for them, but probably don’t do this at home.
-- 📜 [The Future of Ionic’s Commercial Products](https://ionic.io/blog/important-announcement-the-future-of-ionics-commercial-products): Ionic is discontinuing sales and support for its commercial products, including Appflow and enterprise offerings.
 - 📜 [Handling Relationships in React Admin](https://marmelab.com/blog/2025/02/06/handling-relationships-in-react-admin.html): The included components (`<ReferenceField>` and its friends) usually do what you need, but this also explains how to build custom ones.
-- 📜 [Redux Saga Is Hard Until You Look Under The Hood](https://www.reactsquad.io/blog/redux-saga-is-hard-until-you-look-under-the-hood)
 - 📜 [Master Redux Action Best Practices & Make Debugging Easy](https://janhesters.com/blog/master-redux-action-best-practices-and-make-debugging-easy)
 - 📦 [React Hook Form resolvers 4.0](https://github.com/react-hook-form/resolvers/releases/tag/v4.0.0): Adds a [standard-schema](https://github.com/standard-schema/standard-schema) resolver, so you can switch easily between validation libraries that conform to the standard-schema specification.
-- 📦 [Base UI v1.0.0 alpha 6](https://github.com/mui/base-ui/releases/tag/v1.0.0-alpha.6): This new collection of unstyled components is backed by a rockstar team of MUI/Radix contributors. It's making its way through the alpha phase with a significant release.
+- 📦 [Base UI v1.0.0 alpha 6](https://github.com/mui/base-ui/releases/tag/v1.0.0-alpha.6): This eagerly awaited collection of unstyled components is making its way through the alpha phase
 - 🎥 [Jack Herrington \- Proof That React With RSCs is 2X Faster\!](https://www.youtube.com/watch?v=AJvbnNFHx0A)
 - 🎙️ [Rocket Ship 60 \- Module Federation, RSCs & Universal Apps with Jack Herrington](https://share.transistor.fm/s/144c4947)
 
