--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /221
-title: "This Week In React #221: State of React, React Router, Rsbuild, ProseMirror, Redux, React Hook Form, Base UI, RSC, React Admin | AI & React Native, React Strict DOM, Polygen, Ignite, New Arch, Radon, macOS, Gesture Handler | TypeScript, Prettier, esbuild..."
+title: "This Week In React #221: State of React, React Router, Rsbuild, ProseMirror, Redux, React Hook Form, Base UI, RSC, React Admin | AI & RN, Strict DOM, Polygen, Ignite, New Arch, Radon, macOS, Universal RSC, Gesture Handler | TypeScript, Prettier, esbuild..."
 authors: [cyrilbo, matthieugicquel]
 date: 02-12-2025
-unlisted: true
 ---
 
 Hi everyone!
@@ -12,7 +11,7 @@ Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=this
 
 This week we’ve been carefully reading the [State of React 2024](https://2024.stateofreact.com) survey results, and also found quite a few interesting articles. Things have been quieter when it comes to new releases.
 
-Check our partner conf [App.js](https://appjs.co?utm_source=thisweekinreact) - 28th-30th May in 🇵🇱 Kraków - The biggest React Native and Expo-focused conference gives us a 15% discount with code "TWIR". Want to [submit a talk](https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKSqxwrTdJJavOFgK-UA25K-hJPmZ5wnZDY7UUo9ULDuckkA/viewform?usp=send_form)? The CFP is closing soon.
+Check our partner conf [App.js](https://appjs.co?utm_source=thisweekinreact), happening May 28-30 in 🇵🇱 Kraków! The biggest React Native and Expo-focused conference gives us a 15% discount with code "TWIR". Want to [submit a talk](https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKSqxwrTdJJavOFgK-UA25K-hJPmZ5wnZDY7UUo9ULDuckkA/viewform?usp=send_form)? Hurry—CFP is closing soon!
 
 <!-- truncate -->
 
