--- a/website/newsletter/221/index.mdx
+++ b/website/newsletter/221/index.mdx
@@ -97,7 +97,7 @@ They’ll also show you how to **minimize reliance on Vercel’s premium feature
 
 We don't talk too much about LLMs in this newsletter (we guess you already hear about it more than enough 😅) but with all the announcements this week we thought it was a good time to give you an update.
 
-The main thing: [Bolt and Expo have partnered](https://expo.dev/blog/bolt-expo-integration-announcement) to add (React-)Native mobile apps support to Bolt. Right now you can preview your AI-generated apps on the web, but you need to download the code to go further. They plan to add an integration with EAS to deploy to production in the future.
+The big news: **[Bolt and Expo have partnered](https://expo.dev/blog/bolt-expo-integration-announcement)** to add (React-)Native mobile apps support to Bolt. Right now you can preview your AI-generated apps on the web, but you need to download the code to go further. They plan to add an integration with EAS to deploy to production in the future.
 
 Some competitors also had things to announce:
 
